networkpolicies/DEV-cluster/test-backup-ns/test-backup-ns-deny-all-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    network-policy.permission-binder.io/template: deny-all-egress.yaml
    network-policy.permission-binder.io/template-path: networkpolicies/templates/deny-all-egress.yaml
    network-policy.permission-binder.io/template-version: 8ae8f2ed9e63b7170aedc2fc684cbfe9222e1ed0
  creationTimestamp: null
  name: test-backup-ns-deny-all-egress
  namespace: test-backup-ns
spec:
  podSelector: {}
  policyTypes:
  - Egress
